# KCD2Tools

./: .gitignore  .gitmodules  README.md
.github/ISSUE_TEMPLATE/: bug_report.yaml
.github/workflows/: deploy-docs.yml  release-tpvcamera.yml  release-tpvtoggle.yml
LootBeacon/: README.md
LootBeacon/docs/: NEXT_CHANGELOG.md  nexus-bbcode.txt  workshop-text.txt
LootBeacon/src/: mod.cfg  mod.manifest
PizzleYanked/: README.md
PizzleYanked/src/: mod.manifest
TPVCamera/: .clang-format  .clang-tidy  .editorconfig  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
TPVCamera/docs/: NEXT_CHANGELOG.md  nexus-bbcode.txt
TPVCamera/docs/archive/: CHANGELOG_v1.0.2.md  CHANGELOG_v1.2.0.md  CHANGELOG_v1.3.0.md
TPVCamera/scripts/: version_updater.py
TPVCamera/src/: aob_resolver.cpp  aob_resolver.hpp  config.cpp  config.hpp  constants.hpp  dllmain.cpp  game_interface.cpp  game_interface.hpp  game_state.cpp  game_state.hpp  game_structures.hpp  global_state.cpp  global_state.hpp  math_utils.hpp  offset_heal.cpp  offset_heal.hpp  physics_raycast.cpp  physics_raycast.hpp  render_occlusion.cpp  render_occlusion.hpp  tpv_camera.cpp  tpv_camera.hpp  version.cpp  version.hpp
TPVCamera/src/dev/: loader.cpp  logic_exports.cpp
TPVCamera/src/hooks/: camera_hook.cpp  camera_hook.hpp  interaction_hook.cpp  interaction_hook.hpp  player_onaction_hook.cpp  player_onaction_hook.hpp  ui_menu_hooks.cpp  ui_menu_hooks.hpp  ui_overlay_hooks.cpp  ui_overlay_hooks.hpp
TPVCamera/src/overlay/: dx_overlay.cpp  dx_overlay.hpp  overlay.cpp  overlay.hpp  overlay_ui.cpp
TPVCamera/src/presets/: camera_preset.cpp  camera_preset.hpp  camera_preset_fields.cpp  camera_preset_fields.hpp  default_presets.hpp  preset_runtime.cpp  preset_runtime.hpp  preset_store.cpp  preset_store.hpp
TPVToggle/: CHANGELOG.md  CMakeLists.txt  CMakePresets.json  KCD2_TPVToggle.ini  KCD2_TPVToggle_Acknowledgements.txt  LICENSE  Makefile  README.md  aob_scanner.cpp  aob_scanner.h  config.cpp  config.h  constants.h  dllmain.cpp  toggle_thread.cpp  toggle_thread.h  version.h
TPVToggle/.github/workflows/: release.yml
TPVToggle/docs/: DESCRIPTION.bbcode  DESCRIPTION.md  NEXT_CHANGELOG.md  nexus-bbcode.txt
TPVToggle/docs/archive/: CHANGELOG_20250330_102717.md  CHANGELOG_20250402_203500.md  CHANGELOG_v0.3.2.md  CHANGELOG_v0.3.3.md  CHANGELOG_v0.3.5.md  CHANGELOG_v0.3.6.md  CHANGELOG_v0.3.7.md  CHANGELOG_v0.4.0.md  CHANGELOG_v0.4.1.md  CHANGELOG_v0.4.2.md  CHANGELOG_v0.5.0.md  CHANGELOG_v0.6.1.md  CHANGELOG_v0.7.0.md
TPVToggle/scripts/: version_updater.py
TPVToggle/src/: aob_scanner.cpp  aob_scanner.h  camera_offset_state.hpp  camera_profile.cpp  camera_profile.h  camera_profile.hpp  camera_profile_thread.cpp  camera_profile_thread.h  camera_profile_thread.hpp  config.cpp  config.h  config.hpp  constants.h  constants.hpp  dllmain.cpp  exception_handler.cpp  exception_handler.h  game_interface.cpp  game_interface.h  game_interface.hpp  game_structures.h  game_structures.hpp  global_state.cpp  global_state.h  global_state.hpp  hook_manager.cpp  hook_manager.hpp  logger.cpp  logger.h  math_utils.h  math_utils.hpp  overlay_detection.cpp  overlay_detection.h  toggle_thread.cpp  toggle_thread.h  toggle_thread.hpp  tpv_toggle.cpp  tpv_toggle.hpp  tpv_utils.cpp  tpv_utils.hpp  (+9 more)
TPVToggle/src/_hooks/: player_state_hook.cpp  tpv_input_hook.cpp  tpv_input_hook.h
TPVToggle/src/asm/: camera_distance_hook.S  menu_close_hook.S  menu_open_hook.S  overlay_hook.S
TPVToggle/src/dev/: loader.cpp  logic_exports.cpp
TPVToggle/src/hooks/: camera_hook.cpp  camera_hooks.hpp  core_hooks.cpp  core_hooks.hpp  entity_hooks.cpp  entity_hooks.h  entity_hooks.hpp  event_hooks.cpp  event_hooks.h  event_hooks.hpp  fov_hook.cpp  fov_hook.h  fov_hook.hpp  overlay_hook.cpp  overlay_hook.h  player_hooks.cpp  player_hooks.hpp  player_state_hook.cpp  player_state_hook.h  tpv_camera.cpp  tpv_camera.hpp  tpv_camera_hook.cpp  tpv_camera_hook.h  tpv_camera_hook.hpp  tpv_hooks.cpp  tpv_hooks.hpp  tpv_input_hook.cpp  tpv_input_hook.h  tpv_input_hook.hpp  ui_menu_hooks.cpp  ui_menu_hooks.h  ui_menu_hooks.hpp  ui_overlay_hooks.cpp  ui_overlay_hooks.h  ui_overlay_hooks.hpp
TPVToggle/static/: KCD2_TPVToggle.ini  KCD2_TPVToggle_Acknowledgements.txt  KCD2_TPVToggle_Readme.txt
docs/script_bind/script_bind_2025_01_14/: !!MEMBERTYPE_Methods_CScriptBindGame.html  !!MEMBERTYPE_Methods_CScriptBind_ActionMapManager.html  !!MEMBERTYPE_Methods_CScriptBind_Entity.html  !!MEMBERTYPE_Methods_C_PlayerStateHandlerScriptBind.html  !!MEMBERTYPE_Methods_C_ScriptBindActor.html  !!MEMBERTYPE_Methods_C_ScriptBindAlchemyTable.html  !!MEMBERTYPE_Methods_C_ScriptBindAnimDoor.html  !!MEMBERTYPE_Methods_C_ScriptBindCarryItemPile.html  !!MEMBERTYPE_Methods_C_ScriptBindCarryableItem.html  !!MEMBERTYPE_Methods_C_ScriptBindDatabase.html  !!MEMBERTYPE_Methods_C_ScriptBindDialog.html  !!MEMBERTYPE_Methods_C_ScriptBindDog.html  !!MEMBERTYPE_Methods_C_ScriptBindEditor.html  !!MEMBERTYPE_Methods_C_ScriptBindEntityModule.html  !!MEMBERTYPE_Methods_C_ScriptBindEnvironment.html  !!MEMBERTYPE_Methods_C_ScriptBindHuman.html  !!MEMBERTYPE_Methods_C_ScriptBindInteractionTrigger.html  !!MEMBERTYPE_Methods_C_ScriptBindLockBase.html  !!MEMBERTYPE_Methods_C_ScriptBindMinigame.html  !!MEMBERTYPE_Methods_C_ScriptBindPickableItem.html  !!MEMBERTYPE_Methods_C_ScriptBindPlayer.html  !!MEMBERTYPE_Methods_C_ScriptBindRPGModule.html  !!MEMBERTYPE_Methods_C_ScriptBindShop.html  !!MEMBERTYPE_Methods_C_ScriptBindSkipTime.html  !!MEMBERTYPE_Methods_C_ScriptBindSoul.html  !!MEMBERTYPE_Methods_C_ScriptBindStash.html  !!MEMBERTYPE_Methods_C_ScriptBindStatistics.html  !!MEMBERTYPE_Methods_C_ScriptBindUI.html  !!MEMBERTYPE_Methods_C_ScriptBindXGenAIModule.html  !!MEMBERTYPE_Methods_C_ScriptBind_Alchemy.html  !!MEMBERTYPE_Methods_C_ScriptBind_Blacksmithing.html  !!MEMBERTYPE_Methods_C_ScriptBind_Cart.html  !!MEMBERTYPE_Methods_C_ScriptBind_HoleDigging.html  !!MEMBERTYPE_Methods_C_ScriptBind_ShootingContest.html  !!MEMBERTYPE_Methods_C_ScriptBind_StoneThrowing.html  (+251 more)
docs/script_bind/script_bind_2025_01_14/tmp/: data.xml  (+1 more)
(+16 files in other folders)
